# xVTF-old

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  xVTF.sln
dev_test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  assert_equal.h  cmake_file.h  cpp_linkage.cpp  cpp_loading.cpp  library_error.h
tests/data/: 32x32_DXT1.raw  32x32_DXT1.vtf  32x32_DXT3.raw  32x32_DXT3.vtf  32x32_DXT5.raw  32x32_DXT5.vtf  32x32_RGBA8888.vtf
xVTF/: CMakeLists.txt  xVTF.vcxproj  xVTF.vcxproj.filters
xVTF CLI Wrapper/: xVTF CLI Wrapper.vcxproj  xVTF CLI Wrapper.vcxproj.filters
xVTF CLI Wrapper/include/xVTF/: xCLI.h  xCLI_PixelFormats.h  xCLI_VTF.h
xVTF CLI Wrapper/src/: xCLI.cpp
xVTF Test/: main.cpp  xVTF Test.vcxproj
xVTF/cmakeheaders/: cmake_exports.h
xVTF/include/xVTF/: .gitignore  bitmapimage.h  error.h  exports.h  flags.h  half_precision_float.h  luts.h  pixelformats.h  types.h  vtf_file.h  xCodecs.h  xExports.h  xHalfPrecisionFloat.h  xImageFile.h  xLUTs.h  xMacros.h  xPixelFormats.h  xVTF.h  xVTFFile.h  xVTFHeaders.h  xVTFReader.h  xVTFStructs.h
xVTF/include/xVTF/internal/: codecs.h  vtfheader.h
xVTF/src/: bitmapimage.cpp  codecs.cpp  codecs.h  error_macro.h  half_precision_float.cpp  luts.h  vtf_file.cpp  vtfheader.h  xCodecs.cpp  xHalfPrecisionFloat.cpp  xImageFile.cpp  xVTF.cpp  xVTFFile.cpp  xVTFReader.cpp
